--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ crossorigin="anonymous">
 <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
         crossorigin="anonymous"></script> 
+
+<script src="data/tacticsbook.js"></script> 	
 <script src="js/tactics.js"></script> 
 <script>
 ;(function () {
@@ -55,108 +57,13 @@ crossorigin="anonymous">
       </ul>
     </nav>
     <div class="examples-body-9af4d" id="exampleBodyContainer">
-      <h2 class="hover-linkable"><a class="hover-link" href="https://chessboardjs.com/examples#1004"></a>Multiple Boards</h2>
-      <p>You can have multiple boards on the same page.</p>
+      <h2 class="hover-linkable"><a class="hover-link" href="https://chessboardjs.com/examples#1004"></a>Page 132</h2>
       <div class="container-4e1ee">
         <div id="board1" class="small-board"></div>
         <div id="board2" class="small-board"> </div>
-        <div id="board3" class="small-board">
-          <div class="chessboard-63f37">
-            <div class="board-b72b1" style="width: 192px;">
-              <div class="row-5277c">
-                <div class="square-55d63 white-1e1d7 square-a8" style="width:24px;height:24px;" id="a8-4dd5-4b0a-8151-f855-4969-3564-0f57-f8b1" data-square="a8"><img src="./index_files/bR.png" alt="" class="piece-417db" data-piece="bR" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-b8" style="width:24px;height:24px;" id="b8-5bb1-f12d-3b1e-229a-f306-7bb5-850c-d98e" data-square="b8"></div>
-                <div class="square-55d63 white-1e1d7 square-c8" style="width:24px;height:24px;" id="c8-1bf6-f5c7-9db7-e647-375c-6512-f863-6c86" data-square="c8"><img src="./index_files/bK.png" alt="" class="piece-417db" data-piece="bK" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-d8" style="width:24px;height:24px;" id="d8-0dde-b136-5d52-c0e9-b443-7573-0d7e-3cc7" data-square="d8"></div>
-                <div class="square-55d63 white-1e1d7 square-e8" style="width:24px;height:24px;" id="e8-093a-3252-46a9-75f4-b784-3073-9c9d-2de1" data-square="e8"></div>
-                <div class="square-55d63 black-3c85d square-f8" style="width:24px;height:24px;" id="f8-559f-5594-afad-bc1c-9e10-35b8-d230-d1c1" data-square="f8"></div>
-                <div class="square-55d63 white-1e1d7 square-g8" style="width:24px;height:24px;" id="g8-a65f-d031-f16d-11f9-f89b-1eec-401b-11e8" data-square="g8"></div>
-                <div class="square-55d63 black-3c85d square-h8" style="width:24px;height:24px;" id="h8-4e6e-aa2e-58d0-651e-11a5-0e0e-7b75-439e" data-square="h8"><img src="./index_files/bR.png" alt="" class="piece-417db" data-piece="bR" style="width:24px;height:24px;"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-              <div class="row-5277c">
-                <div class="square-55d63 black-3c85d square-a7" style="width:24px;height:24px;" id="a7-20e3-93ac-9a59-6b86-c3a2-a07d-a62d-d987" data-square="a7"><img src="./index_files/bP.png" alt="" class="piece-417db" data-piece="bP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-b7" style="width:24px;height:24px;" id="b7-8184-4524-6ad5-2ce2-242d-aa27-eb5d-c6de" data-square="b7"></div>
-                <div class="square-55d63 black-3c85d square-c7" style="width:24px;height:24px;" id="c7-b3e2-b2f0-55ad-f1b4-9ae9-a90f-84d3-e234" data-square="c7"></div>
-                <div class="square-55d63 white-1e1d7 square-d7" style="width:24px;height:24px;" id="d7-13ee-e895-a9b1-05aa-aecb-b563-630b-94c6" data-square="d7"><img src="./index_files/bN.png" alt="" class="piece-417db" data-piece="bN" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-e7" style="width:24px;height:24px;" id="e7-3800-fc3f-2cec-e7dc-c8f3-fd14-46d1-1159" data-square="e7"><img src="./index_files/bB.png" alt="" class="piece-417db" data-piece="bB" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-f7" style="width:24px;height:24px;" id="f7-038d-a6ba-55ed-6304-e796-b988-74cb-9123" data-square="f7"></div>
-                <div class="square-55d63 black-3c85d square-g7" style="width:24px;height:24px;" id="g7-487d-7fdf-6dce-2382-187e-4afb-510a-0175" data-square="g7"><img src="./index_files/bP.png" alt="" class="piece-417db" data-piece="bP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-h7" style="width:24px;height:24px;" id="h7-78fa-cb9b-0298-7600-b576-b30f-c659-29a6" data-square="h7"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-              <div class="row-5277c">
-                <div class="square-55d63 white-1e1d7 square-a6" style="width:24px;height:24px;" id="a6-932c-3e22-69ee-2d5d-3c61-4e79-2ae3-efde" data-square="a6"></div>
-                <div class="square-55d63 black-3c85d square-b6" style="width:24px;height:24px;" id="b6-c196-aa57-80d1-4d4b-2112-ef19-3c0f-148f" data-square="b6"></div>
-                <div class="square-55d63 white-1e1d7 square-c6" style="width:24px;height:24px;" id="c6-f28e-297e-38a6-6695-79a1-f795-7ebe-6fdc" data-square="c6"><img src="./index_files/bB.png" alt="" class="piece-417db" data-piece="bB" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-d6" style="width:24px;height:24px;" id="d6-ab10-4660-6aed-83f1-ff98-198a-e411-744c" data-square="d6"></div>
-                <div class="square-55d63 white-1e1d7 square-e6" style="width:24px;height:24px;" id="e6-bf19-176d-d6b8-af4d-cbf7-1b8c-7e96-8481" data-square="e6"></div>
-                <div class="square-55d63 black-3c85d square-f6" style="width:24px;height:24px;" id="f6-2bc3-568b-5235-2112-499b-204f-a784-9f73" data-square="f6"></div>
-                <div class="square-55d63 white-1e1d7 square-g6" style="width:24px;height:24px;" id="g6-b518-9cf1-e46b-79d0-329b-0d6c-f46f-1d32" data-square="g6"></div>
-                <div class="square-55d63 black-3c85d square-h6" style="width:24px;height:24px;" id="h6-bccf-917b-47cb-2678-d720-0922-adbb-355d" data-square="h6"><img src="./index_files/bP.png" alt="" class="piece-417db" data-piece="bP" style="width:24px;height:24px;"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-              <div class="row-5277c">
-                <div class="square-55d63 black-3c85d square-a5" style="width:24px;height:24px;" id="a5-f023-9923-1e2f-4473-67e4-235a-409c-7dba" data-square="a5"></div>
-                <div class="square-55d63 white-1e1d7 square-b5" style="width:24px;height:24px;" id="b5-8caa-fcbc-a7d3-4893-cc51-db5d-f012-a4a6" data-square="b5"><img src="./index_files/bP.png" alt="" class="piece-417db" data-piece="bP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-c5" style="width:24px;height:24px;" id="c5-099f-8980-6896-aff8-a439-b9c3-5845-d648" data-square="c5"></div>
-                <div class="square-55d63 white-1e1d7 square-d5" style="width:24px;height:24px;" id="d5-72c9-731a-1b7e-f68a-0206-0443-68d4-1e64" data-square="d5"><img src="./index_files/bN.png" alt="" class="piece-417db" data-piece="bN" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-e5" style="width:24px;height:24px;" id="e5-dd94-ed19-614f-a38d-aaac-0530-e1b0-3692" data-square="e5"></div>
-                <div class="square-55d63 white-1e1d7 square-f5" style="width:24px;height:24px;" id="f5-57fa-d714-3211-7978-ec9c-015c-bbcb-8ed1" data-square="f5"><img src="./index_files/bP.png" alt="" class="piece-417db" data-piece="bP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-g5" style="width:24px;height:24px;" id="g5-e8e3-ac22-e7bf-9b9d-a812-7f9d-06db-e30a" data-square="g5"></div>
-                <div class="square-55d63 white-1e1d7 square-h5" style="width:24px;height:24px;" id="h5-bf45-554a-b51d-14ac-7277-a22f-ef61-4e74" data-square="h5"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-              <div class="row-5277c">
-                <div class="square-55d63 white-1e1d7 square-a4" style="width:24px;height:24px;" id="a4-066c-c8ba-ade0-a6e8-6519-4dd3-b93e-522a" data-square="a4"></div>
-                <div class="square-55d63 black-3c85d square-b4" style="width:24px;height:24px;" id="b4-3e01-546b-1a88-f1a3-7660-55a6-586b-4254" data-square="b4"></div>
-                <div class="square-55d63 white-1e1d7 square-c4" style="width:24px;height:24px;" id="c4-e0be-5979-d411-346d-536b-a4a6-9155-f817" data-square="c4"><img src="./index_files/wP.png" alt="" class="piece-417db" data-piece="wP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-d4" style="width:24px;height:24px;" id="d4-e86f-2247-6991-1569-475a-3a12-4e0f-eead" data-square="d4"><img src="./index_files/wP.png" alt="" class="piece-417db" data-piece="wP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-e4" style="width:24px;height:24px;" id="e4-0117-a4f5-1ef3-2cd2-cffc-2b69-22d8-795d" data-square="e4"></div>
-                <div class="square-55d63 black-3c85d square-f4" style="width:24px;height:24px;" id="f4-d723-1bf1-8416-dcc7-d780-05cd-b704-524f" data-square="f4"></div>
-                <div class="square-55d63 white-1e1d7 square-g4" style="width:24px;height:24px;" id="g4-d237-3e63-c55a-830e-00bb-b235-b0ad-8f8d" data-square="g4"></div>
-                <div class="square-55d63 black-3c85d square-h4" style="width:24px;height:24px;" id="h4-8ab2-e546-54eb-7077-8651-74cc-d10f-5789" data-square="h4"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-              <div class="row-5277c">
-                <div class="square-55d63 black-3c85d square-a3" style="width:24px;height:24px;" id="a3-0ead-12d1-4a8b-5d26-97e6-3c2e-2a81-3595" data-square="a3"></div>
-                <div class="square-55d63 white-1e1d7 square-b3" style="width:24px;height:24px;" id="b3-e0bc-9086-3734-2def-1977-3072-5225-e1bc" data-square="b3"></div>
-                <div class="square-55d63 black-3c85d square-c3" style="width:24px;height:24px;" id="c3-5e04-646b-1174-af80-78f1-cf73-ce73-86cc" data-square="c3"></div>
-                <div class="square-55d63 white-1e1d7 square-d3" style="width:24px;height:24px;" id="d3-653e-213e-fb80-bc7c-dc24-6162-497d-6726" data-square="d3"><img src="./index_files/wQ.png" alt="" class="piece-417db" data-piece="wQ" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-e3" style="width:24px;height:24px;" id="e3-9980-0e73-5b85-5056-6789-04a5-ed7b-c3b8" data-square="e3"></div>
-                <div class="square-55d63 white-1e1d7 square-f3" style="width:24px;height:24px;" id="f3-07e7-cbd0-86b7-ecf7-0399-65a2-ae55-ee80" data-square="f3"><img src="./index_files/wN.png" alt="" class="piece-417db" data-piece="wN" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-g3" style="width:24px;height:24px;" id="g3-39fe-0a3b-5b79-7f06-31ef-d17a-1f2f-cde9" data-square="g3"><img src="./index_files/wB.png" alt="" class="piece-417db" data-piece="wB" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-h3" style="width:24px;height:24px;" id="h3-1f17-b27b-42b6-7b80-1654-b3ef-3b7b-1bb3" data-square="h3"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-              <div class="row-5277c">
-                <div class="square-55d63 white-1e1d7 square-a2" style="width:24px;height:24px;" id="a2-3e7a-780f-78af-1e9a-8839-e8f3-1cda-3a67" data-square="a2"></div>
-                <div class="square-55d63 black-3c85d square-b2" style="width:24px;height:24px;" id="b2-0919-6d68-ad59-40df-b2a3-4055-c7fc-7bdc" data-square="b2"><img src="./index_files/wP.png" alt="" class="piece-417db" data-piece="wP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-c2" style="width:24px;height:24px;" id="c2-c638-00ef-f56a-0463-5d9b-0637-57b7-036a" data-square="c2"></div>
-                <div class="square-55d63 black-3c85d square-d2" style="width:24px;height:24px;" id="d2-c610-9a67-9d5d-e39c-8db5-e921-6df9-c8a3" data-square="d2"></div>
-                <div class="square-55d63 white-1e1d7 square-e2" style="width:24px;height:24px;" id="e2-bff1-0e7e-ad46-df9d-7a12-8d98-4a03-108e" data-square="e2"></div>
-                <div class="square-55d63 black-3c85d square-f2" style="width:24px;height:24px;" id="f2-48ae-9547-793f-6b8b-3e04-f23b-5141-af18" data-square="f2"><img src="./index_files/wP.png" alt="" class="piece-417db" data-piece="wP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-g2" style="width:24px;height:24px;" id="g2-09dc-c12e-cd59-e524-8b57-e404-c5f6-29fb" data-square="g2"><img src="./index_files/wP.png" alt="" class="piece-417db" data-piece="wP" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 black-3c85d square-h2" style="width:24px;height:24px;" id="h2-a118-9107-2fcc-46a6-e252-235b-0fcd-fd5a" data-square="h2"><img src="./index_files/wP.png" alt="" class="piece-417db" data-piece="wP" style="width:24px;height:24px;"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-              <div class="row-5277c">
-                <div class="square-55d63 black-3c85d square-a1" style="width:24px;height:24px;" id="a1-bdf0-1038-1fe1-df33-eddd-d8d8-1efe-b1d4" data-square="a1"><img src="./index_files/wR.png" alt="" class="piece-417db" data-piece="wR" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-b1" style="width:24px;height:24px;" id="b1-6e3c-0939-ce53-7468-c00d-4762-f7db-50f9" data-square="b1"></div>
-                <div class="square-55d63 black-3c85d square-c1" style="width:24px;height:24px;" id="c1-c06e-638c-cc39-fedf-e441-02cc-cfc0-2737" data-square="c1"></div>
-                <div class="square-55d63 white-1e1d7 square-d1" style="width:24px;height:24px;" id="d1-4ace-5130-ce93-8f73-5f46-7e4d-2584-9435" data-square="d1"></div>
-                <div class="square-55d63 black-3c85d square-e1" style="width:24px;height:24px;" id="e1-8c60-b331-a6fb-73f3-36ef-a598-41bc-e644" data-square="e1"></div>
-                <div class="square-55d63 white-1e1d7 square-f1" style="width:24px;height:24px;" id="f1-8f49-1402-96de-62f9-20b7-c61f-1a77-e3e7" data-square="f1"></div>
-                <div class="square-55d63 black-3c85d square-g1" style="width:24px;height:24px;" id="g1-2d79-55d7-b48d-b5da-db5a-73f0-247b-f2c9" data-square="g1"><img src="./index_files/wK.png" alt="" class="piece-417db" data-piece="wK" style="width:24px;height:24px;"></div>
-                <div class="square-55d63 white-1e1d7 square-h1" style="width:24px;height:24px;" id="h1-8b95-17c2-fa9a-3c43-579b-b9a1-39cf-640e" data-square="h1"></div>
-                <div class="clearfix-7da63"></div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
       <div class="container-4e1ee" >
-        <div class="tactic_block" id="tacticblock_1">
+        <div class="tactic_block" id="tacticblock_0">
         </div>
       </div>
       <h4>JavaScript</h4>
