--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ crossorigin="anonymous">
 <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
         crossorigin="anonymous"></script> 
-
-<script src="data/tacticsbook.js"></script> 	
+<script src="data/tacticsbook.js"></script> 
 <script src="js/tactics.js"></script> 
 <script>
 ;(function () {
@@ -37,37 +36,48 @@ crossorigin="anonymous">
 
 <body data-new-gr-c-s-check-loaded="14.993.0" data-gr-ext-installed="">
 <header>
-  <div class="body-width-115f6 flex-c31d5">
-    <div class="left-3edd4"> <a class="homepage-link-98a24" href="https://chessboardjs.com/index.html">Tactics 2001<span class="tld-bd9e6"> Made by Yizhou Zhao, 2021</span></a> </div>
-    <div class="right-05ad3"> <a href="https://chessboardjs.com/index.html">Home</a> <a class="active" href="https://chessboardjs.com/examples">Examples</a> <a href="https://chessboardjs.com/docs">Docs</a> <a href="https://chessboardjs.com/download">Download</a> </div>
-  </div>
+    <div class="body-width-115f6 flex-c31d5">
+        <div class="left-3edd4"> <a class="homepage-link-98a24" href="https://chessboardjs.com/index.html">Tactics 2001<span class="tld-bd9e6"> Made by Yizhou Zhao, 2021</span></a> </div>
+        <div class="right-05ad3"> <a href="https://chessboardjs.com/index.html">Home</a> <a class="active" href="https://chessboardjs.com/examples">Examples</a> <a href="https://chessboardjs.com/docs">Docs</a> <a href="https://chessboardjs.com/download">Download</a> </div>
+    </div>
 </header>
 <main>
-  <div class="body-width-115f6 flex-c31d5 examples-c30bc">
-    <nav class="example-nav-0e953" id="examplesNav">
-      <h4 id="groupHeader-1" class="active">Basic Usage</h4>
-      <ul id="groupContainer-1" style="">
-        <li id="exampleLink-1000" class="">Empty Board</li>
-        <li id="exampleLink-1001" class="">Start Position</li>
-      </ul>
-      <h4 id="groupHeader-5">Integration</h4>
-      <ul id="groupContainer-5" style="display:none">
-        <li id="exampleLink-5000">Only Allow Legal Moves</li>
-        <li id="exampleLink-5001">Play Random Computer</li>
-      </ul>
-    </nav>
-    <div class="examples-body-9af4d" id="exampleBodyContainer">
-      <h2 class="hover-linkable"><a class="hover-link" href="https://chessboardjs.com/examples#1004"></a>Page 132</h2>
-      <div class="container-4e1ee">
-        <div id="board1" class="small-board"></div>
-        <div id="board2" class="small-board"> </div>
-      </div>
-      <div class="container-4e1ee" >
-        <div class="tactic_block" id="tacticblock_0">
-        </div>
-      </div>
-      <h4>JavaScript</h4>
-      <pre class="prettyprint"><span class="kwd">var</span><span class="pln"> board1 </span><span class="pun">=</span><span class="pln"> </span><span class="typ">Chessboard</span><span class="pun">(</span><span class="str">'board1'</span><span class="pun">,</span><span class="pln"> </span><span class="pun">{</span><span class="pln">
+    <div class="body-width-115f6 flex-c31d5 examples-c30bc">
+        <nav class="example-nav-0e953" id="examplesNav">
+            <h4 id="groupHeader-1" class="active">Basic Usage</h4>
+            <ul id="groupContainer-1" style="">
+                <li id="exampleLink-1000" class="">Empty Board</li>
+                <li id="exampleLink-1001" class="">Start Position</li>
+            </ul>
+            <h4 id="groupHeader-5">Integration</h4>
+            <ul id="groupContainer-5" style="display:none">
+                <li id="exampleLink-5000">Only Allow Legal Moves</li>
+                <li id="exampleLink-5001">Play Random Computer</li>
+            </ul>
+        </nav>
+        <div class="examples-body-9af4d" id="exampleBodyContainer">
+            <h2 class="hover-linkable"><a class="hover-link" href="https://chessboardjs.com/examples#1004"></a>Page 132</h2>
+            <div class="container-4e1ee">
+                <div id="board1" class="small-board"></div>
+                <div id="board2" class="small-board"> </div>
+            </div>
+            <!--<div class="tactic_block" id="tacticblock_0"> </div>-->
+            
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="tactic_block" id="tacticblock_0"> </div>
+                        <!-- <img src="https://via.placeholder.com/200px">--> 
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>John Doe</h1>
+                        <p>Architect & Engineer</p>
+                        <p>We love that guy</p>
+                    </div>
+                </div>
+            </div>
+            <h4>JavaScript</h4>
+            <pre class="prettyprint"><span class="kwd">var</span><span class="pln"> board1 </span><span class="pun">=</span><span class="pln"> </span><span class="typ">Chessboard</span><span class="pun">(</span><span class="str">'board1'</span><span class="pun">,</span><span class="pln"> </span><span class="pun">{</span><span class="pln">
   position</span><span class="pun">:</span><span class="pln"> </span><span class="str">'start'</span><span class="pun">,</span><span class="pln">
   showNotation</span><span class="pun">:</span><span class="pln"> </span><span class="kwd">false</span><span class="pln">
 </span><span class="pun">})</span><span class="pln">
@@ -77,44 +87,20 @@ crossorigin="anonymous">
   position</span><span class="pun">:</span><span class="pln"> </span><span class="str">'r1k4r/p2nb1p1/2b4p/1p1n1p2/2PP4/3Q1NB1/1P3PPP/R5K1'</span><span class="pun">,</span><span class="pln">
   showNotation</span><span class="pun">:</span><span class="pln"> </span><span class="kwd">false</span><span class="pln">
 </span><span class="pun">})</span></pre>
+        </div>
     </div>
-  </div>
 </main>
 <footer>
-  <div class="body-width-115f6 flex-c31d5">
-    <div class="left-3edd4">
-      <p>chessboard.js is released under the <a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE.md">MIT License</a></p>
-      <p>the code can be found on <a href="https://github.com/oakmac/chessboardjs/">GitHub</a></p>
+    <div class="body-width-115f6 flex-c31d5">
+        <div class="left-3edd4">
+            <p>chessboard.js is released under the <a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE.md">MIT License</a></p>
+            <p>the code can be found on <a href="https://github.com/oakmac/chessboardjs/">GitHub</a></p>
+        </div>
+        <div class="right-05ad3">
+            <p>by <a href="https://chrisoakman.com/">Yizhou Zhao</a></p>
+        </div>
     </div>
-    <div class="right-05ad3">
-      <p>by <a href="https://chrisoakman.com/">Yizhou Zhao</a></p>
-    </div>
-  </div>
 </footer>
-<script>
-window.CHESSBOARD_EXAMPLES = {}
-
-CHESSBOARD_EXAMPLES["1000"] = {
-  description: "Chessboard.js initializes to an empty board with no second argument.",
-  html: "<div id=\"myBoard\" style=\"width: 400px\"></div>",
-  name: "Empty Board",
-  jsStr: "var board = Chessboard('myBoard')",
-  jsFn: function () {
-var board = Chessboard('myBoard')
-  }
-};
-
-CHESSBOARD_EXAMPLES["1001"] = {
-  description: "Pass <code class=\"js string\">'start'</code> as the second argument to initialize\nthe board to the start position.",
-  html: "<div id=\"myBoard\" style=\"width: 400px\"></div>",
-  name: "Start Position",
-  jsStr: "var board = Chessboard('myBoard', 'start')",
-  jsFn: function () {
-var board = Chessboard('myBoard', 'start')
-  }
-};
-</script> 
-
 <!--<img src="./index_files/wP.png" id="268f-03fe-152a-20ee-6019-3e12-52bd-b86a" alt="" class="piece-417db" data-piece="wP" style="width: 49px; height: 49px; display: none;"><img src="./index_files/wP.png" id="53c2-2032-b0ef-d0bc-fa4c-fa4e-0995-a007" alt="" class="piece-417db" data-piece="wP" style="width: 49px; height: 49px; display: none;"><img src="./index_files/wP.png" id="6a65-00b5-8fcf-cbaf-5396-957d-6810-7f19" alt="" class="piece-417db" data-piece="wP" style="width: 49px; height: 49px; display: none;"><img src="./index_files/wP.png" id="be9a-d2e5-3dbb-7bea-c855-cc2d-fa8a-cb42" alt="" class="piece-417db" data-piece="wP" style="width: 49px; height: 49px; display: none;"><img src="./index_files/wP.png" id="fb32-49b2-b697-6b49-c1e5-f8b9-3e4f-30e5" alt="" class="piece-417db" data-piece="wP" style="width: 49px; height: 49px; display: none;"><img src="./index_files/wP.png" id="6ced-2eda-578e-2cc2-44cc-c0ad-719c-bc0b" alt="" class="piece-417db" data-piece="wP" style="width: 24px; height: 24px; display: none;"><img src="./index_files/wP.png" id="1d37-0fa3-233e-ce69-56fd-2217-7a20-52f8" alt="" class="piece-417db" data-piece="wP" style="width: 24px; height: 24px; display: none;"><img src="./index_files/wP.png" id="a2d2-b6d4-2661-d924-ad38-6f38-47ef-ca7e" alt="" class="piece-417db" data-piece="wP" style="width: 24px; height: 24px; display: none;">-->
 </body>
 </html>
