--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@ crossorigin="anonymous">
 			<div class="example-block-head d-flex justify-content-between">
 				<nav aria-label="Page navigation example">
 				  <ul class="pagination">
-					<li class="page-item">
-					  <a class="page-link" href="#" aria-label="Previous" onClick="change_page(true)">
+					<li class="page-item" id="previousPageLi">
+					  <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id="">
 						<span aria-hidden="true">&laquo;</span>
 						<span class="sr-only">Previous</span>
 					  </a>
 					</li>
 					<li class="page-item"><a class="page-link" id="pageId" href="#">1</a></li>
-					<li class="page-item">
-					  <a class="page-link" href="#" aria-label="Next" onClick="change_page()">
+					<li class="page-item" id="nextPageLi">
+					  <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)">
 						<span aria-hidden="true">&raquo;</span>
 						<span class="sr-only">Next</span>
 					  </a>
