--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ crossorigin="anonymous">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.993.0" data-gr-ext-installed="">
-<header>
+<header style="background-color: #CC373A">
     <div class="body-width-115f6 flex-c31d5">
         <div class="left-3edd4"> <a class="homepage-link-98a24" href="https://chessboardjs.com/index.html">Tactics 2001<span class="tld-bd9e6"> Made by Yizhou Zhao, 2021</span></a> </div>
         <div class="right-05ad3"> <a href="https://chessboardjs.com/index.html">Home</a> <a class="active" href="https://chessboardjs.com/examples">Examples</a> <a href="https://chessboardjs.com/docs">Docs</a> <a href="https://chessboardjs.com/download">Download</a> </div>
@@ -57,48 +57,48 @@ crossorigin="anonymous">
             </ul>
         </nav>
         <div class="examples-body-9af4d" id="exampleBodyContainer">
-			<div class="example-block-head d-flex justify-content-between">
-				<nav aria-label="Page navigation example">
-				  <ul class="pagination">
-					<li class="page-item" id="previousPageLi">
-					  <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id="">
-						<span aria-hidden="true">&laquo;</span>
-						<span class="sr-only">Previous</span>
-					  </a>
-					</li>
-					<li class="page-item"><a class="page-link" id="pageId" href="#">1</a></li>
-					<li class="page-item" id="nextPageLi">
-					  <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)">
-						<span aria-hidden="true">&raquo;</span>
-						<span class="sr-only">Next</span>
-					  </a>
-					</li>
-				  </ul>
-				</nav>
-				<h4>Page 132</h4>
-			</div>
-            <div class="container-4e1ee">
-                <div id="board1" class="small-board"></div>
-                <div id="board2" class="small-board"> </div>
+            <div class="example-block-head d-flex justify-content-between">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
+                        <li class="page-item"><a class="page-link" id="pageId" href="#">1</a></li>
+                        <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
+                    </ul>
+                </nav>
+                <h4>Page 132</h4>
             </div>
-            <!--<div class="tactic_block" id="tacticblock_0"> </div>-->
-            
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <div class="tactic_block" id="tacticblock_0"> </div>
-                        <!-- <img src="https://via.placeholder.com/200px">--> 
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>John Doe</h1>
-                        <p>Architect & Engineer</p>
-                        <p>We love that guy</p>
+            <div id="fakeBodyContainer">
+                <div class="container-4e1ee">
+                    <div id="board1" class="small-board"></div>
+                    <div id="board2" class="small-board"> </div>
+                </div>
+                <!--<div class="tactic_block" id="tacticblock_0"> </div>-->
+                
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <div class="tactic_block" id="tacticblock_0"> </div>
+                            <!-- <img src="https://via.placeholder.com/200px">--> 
+                        </div>
+                        <div class="flip-card-back">
+                            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                                <button type="button" class="btn btn-outline-primary">Show answer</button>
+                            </div>
+                            <div class="scrollable">
+                                <p class="tactic-answer">@fat
+                                    Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
+                            </div>
+                            <div> <span>Download</span>
+                                <div class="btn-group" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-primary">PGN</button>
+                                    <button type="button" class="btn btn-outline-primary">FEN</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-			<div id="realBodyContainer">
-			
-			</div>
+            <div id="realBodyContainer"> </div>
         </div>
     </div>
 </main>
