--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@ crossorigin="anonymous">
 <header style="background-color: #CC373A">
     <div class="body-width-115f6 flex-c31d5">
         <div class="left-3edd4"> <a class="homepage-link-98a24" href="https://chessboardjs.com/index.html">Tactics 2001<span class="tld-bd9e6"> Made by Yizhou Zhao, 2021</span></a> </div>
-        <div class="right-05ad3"> <a href="https://chessboardjs.com/index.html">Home</a> <a class="active" href="https://chessboardjs.com/examples">Examples</a> <a href="https://chessboardjs.com/docs">Docs</a> <a href="https://chessboardjs.com/download">Download</a> </div>
+        <div class="right-05ad3"> <a href="https://chessboardjs.com/index.html">Home</a> <a class="active" <a href="https://chessboardjs.com/download">Download</a> </div>
     </div>
 </header>
 <main>
     <div class="body-width-115f6 flex-c31d5 examples-c30bc">
         <nav class="example-nav-0e953" id="examplesNav">
-            <h4 id="groupHeader-1" class="active">Basic Usage</h4>
+            <h4 id="groupHeader-1" class="active">Tactics</h4>
             <ul id="groupContainer-1" style="">
-                <li id="exampleLink-1000" class="">Empty Board</li>
-                <li id="exampleLink-1001" class="">Start Position</li>
+                <li id="exampleLink-1000" class="">By piece</li>
+                <li id="exampleLink-1001" class="">By strategy</li>
             </ul>
-            <h4 id="groupHeader-5">Integration</h4>
+            <h4 id="groupHeader-5">Instruction</h4>
             <ul id="groupContainer-5" style="display:none">
                 <li id="exampleLink-5000">Only Allow Legal Moves</li>
                 <li id="exampleLink-5001">Play Random Computer</li>
@@ -67,7 +67,7 @@ crossorigin="anonymous">
                 </nav>
                 <h4>Page 132</h4>
             </div>
-            <div id="fakeBodyContainer">
+            <div id="fakeBodyContainer" hidden>
                 <div class="container-4e1ee">
                     <div id="board1" class="small-board"></div>
                     <div id="board2" class="small-board"> </div>
@@ -81,19 +81,20 @@ crossorigin="anonymous">
                             <!-- <img src="https://via.placeholder.com/200px">--> 
                         </div>
                         <div class="flip-card-back">
-                            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <div class="btn-group" role="group" style="margin-top:10px;">
                                 <button type="button" class="btn btn-outline-primary">Show answer</button>
                             </div>
-                            <div class="scrollable">
+                            <div class="scrollable" style="visibility:visible;">
                                 <p class="tactic-answer">@fat
                                     Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
                             </div>
-                            <div> <span>Download</span>
+                            <div style="display: inline;"> <span>Copy: </span>
                                 <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                    <button type="button" class="btn btn-outline-primary">PGN</button>
-                                    <button type="button" class="btn btn-outline-primary">FEN</button>
+                                    <button type="button" class="btn btn-outline-primary"> PGN </button>
+                                    <button type="button" class="btn btn-outline-primary"> FEN </button>
                                 </div>
                             </div>
+							<div class="copy-notification" style="visibility:visible;">Copied successfully (analyze in <a href="https://www.chess.com/analysis">chess.com </a>)</div>
                         </div>
                     </div>
                 </div>
