--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ crossorigin="anonymous">
                 </nav>
                 <h4>Page 132</h4>
             </div>
-            <div id="fakeBodyContainer" hidden>
+            <div id="fakeBodyContainer">
                 <div class="container-4e1ee">
                     <div id="board1" class="small-board"></div>
                     <div id="board2" class="small-board"> </div>
